Fixed squashed images/unaligned text in products

--- a/src/app/product/product-profile/product-profile.component.scss
+++ b/src/app/product/product-profile/product-profile.component.scss
@@ -4,6 +4,9 @@
 
   & div:first-child {
     align-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 2.5rem 1rem;
     text-align: center;
   }
